--- a/smsservice/pom.xml
+++ b/smsservice/pom.xml
@@ -79,6 +79,12 @@
             <version>1.2.17</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+        </dependency>
+
 
         <dependency>
             <groupId>javax.servlet</groupId>
